[project]
name = "champdev-comfyui-nodes"
description = ""
version = "0.1.0"
license = {file = "LICENSE"} 

[project.urls]
Repository = "https://github.com/rohit267/champdev-comfyui-nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/rohit267/champdev-comfyui-nodes/wiki"
"Bug Tracker" = "https://github.com/rohit267/champdev-comfyui-nodes/issues"

[tool.comfy]
PublisherId = "rohit267"
DisplayName = "champdev-comfyui-nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=0.1.0"  # ComfyUI version compatibility

